[gd_scene load_steps=21 format=3 uid="uid://66f84vmy3dvb"]

[ext_resource type="Script" path="res://Jefe.gd" id="1_iwu61"]
[ext_resource type="Texture2D" uid="uid://bga5poxstlvu4" path="res://Assets_PixelAdventure/Enemies/Slime/Idle-Run (44x30).png" id="2_poxnq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_q2oye"]
atlas = ExtResource("2_poxnq")
region = Rect2(0, 0, 44, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_31l2b"]
atlas = ExtResource("2_poxnq")
region = Rect2(44, 0, 44, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_b5k6s"]
atlas = ExtResource("2_poxnq")
region = Rect2(88, 0, 44, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_vyfyp"]
atlas = ExtResource("2_poxnq")
region = Rect2(0, 0, 44, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_yqlie"]
atlas = ExtResource("2_poxnq")
region = Rect2(44, 0, 44, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_45l8r"]
atlas = ExtResource("2_poxnq")
region = Rect2(88, 0, 44, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_0t2mf"]
atlas = ExtResource("2_poxnq")
region = Rect2(132, 0, 44, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_td17g"]
atlas = ExtResource("2_poxnq")
region = Rect2(176, 0, 44, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_4o2gx"]
atlas = ExtResource("2_poxnq")
region = Rect2(220, 0, 44, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5x7a"]
atlas = ExtResource("2_poxnq")
region = Rect2(264, 0, 44, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_34c1o"]
atlas = ExtResource("2_poxnq")
region = Rect2(308, 0, 44, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_lwhec"]
atlas = ExtResource("2_poxnq")
region = Rect2(352, 0, 44, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_an2ky"]
atlas = ExtResource("2_poxnq")
region = Rect2(396, 0, 44, 30)

[sub_resource type="SpriteFrames" id="SpriteFrames_br6fn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2oye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31l2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b5k6s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31l2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2oye")
}],
"loop": true,
"name": &"Idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vyfyp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yqlie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_45l8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0t2mf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_td17g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4o2gx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5x7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_34c1o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lwhec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_an2ky")
}],
"loop": true,
"name": &"Run",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_evoie"]
size = Vector2(28.8605, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hqepo"]
size = Vector2(59, 33)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c2l8b"]
size = Vector2(8, 32.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1xj7k"]
size = Vector2(5, 33)

[node name="Jefe" type="CharacterBody2D"]
script = ExtResource("1_iwu61")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1.90735e-06, -8)
scale = Vector2(1.95455, 1.56667)
sprite_frames = SubResource("SpriteFrames_br6fn")
animation = &"Idle"

[node name="RayCast2D" type="RayCast2D" parent="AnimatedSprite2D"]
visible = false
position = Vector2(-15, 14)
target_position = Vector2(0, 14)
collision_mask = 3

[node name="Area2D" type="Area2D" parent="AnimatedSprite2D"]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AnimatedSprite2D/Area2D"]
position = Vector2(-1.43023, -9.5)
shape = SubResource("RectangleShape2D_evoie")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, -2)
shape = SubResource("RectangleShape2D_hqepo")

[node name="zonaDaño" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="zonaDaño"]
position = Vector2(31, -2)
shape = SubResource("RectangleShape2D_c2l8b")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="zonaDaño"]
position = Vector2(-34, -2)
shape = SubResource("RectangleShape2D_1xj7k")

[node name="Timer" type="Timer" parent="."]

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(32, 0)

[node name="Marker2D2" type="Marker2D" parent="."]
position = Vector2(-32, 0)

[connection signal="body_entered" from="AnimatedSprite2D/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="zonaDaño" to="." method="_on_zonaDaño_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
